--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,16 @@ dist.jar=${dist.dir}/Jaaer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\javam\\Desktop\\Calendario\\jcalendar-1.3.3.jar
+file.reference.MaterialButtons.jar=C:\\Users\\javam\\Downloads\\Material desing\\MaterialButtons\\dist\\MaterialButtons.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${libs.JasperLibrary.classpath}
+    ${libs.JasperLibrary.classpath}:\
+    ${libs.MaterialDesing.classpath}:\
+    ${file.reference.MaterialButtons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
