--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Jaaer
+application.vendor=javam
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,18 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Jaaer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.3.3.jar=C:\\Users\\javam\\Desktop\\Calendario\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\javam\\Downloads\\Calendario\\jcalendar-1.3.3.jar
 file.reference.MaterialButtons.jar=C:\\Users\\javam\\Downloads\\Material desing\\MaterialButtons\\dist\\MaterialButtons.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.3.3.jar}:\
     ${libs.JasperLibrary.classpath}:\
     ${libs.MaterialDesing.classpath}:\
-    ${file.reference.MaterialButtons.jar}
+    ${file.reference.MaterialButtons.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
