modficiacions de: walter

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.ButtonMaterialDesing.classpath}:\
     ${file.reference.MaterialButtons.jar-1}:\
-    ${libs.JasperLibrary.classpath}
+    ${libs.JasperLibrary.classpath}:\
+    ${libs.libreriaApache.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
