--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Jaaer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\Javier\\Downloads\\Calendario\\jcalendar-1.3.3.jar
 file.reference.MaterialButtons.jar=C:\\Users\\javam\\Downloads\\Material desing\\MaterialButtons\\dist\\MaterialButtons.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.MaterialButtons.jar}:\
     ${libs.JasperLibrary.classpath}:\
     ${libs.MaterialDesing.classpath}:\
-    ${libs.libreriaApache.classpath}
+    ${libs.libreriaApache.classpath}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
