--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,27 @@ dist.jar=${dist.dir}/Jaaer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.MaterialButtons.jar=C:\\Users\\Walter\\Documents\\Material desing\\MaterialButtons\\dist\\MaterialButtons.jar
+file.reference.AbsoluteLayout.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\AbsoluteLayout.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\commons-logging-1.2.jar
+file.reference.groovy-2.4.5.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\groovy-2.4.5.jar
+file.reference.groovy-2.4.5.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\groovy-2.4.5.jar
+file.reference.itext-pdfa-5.5.4.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\itext-pdfa-5.5.4.jar
+file.reference.itext-pdfa-5.5.4.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\itextpdf-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\jasperreports-6.0.0.jar
+file.reference.jasperreports-6.0.0.jar-1=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\Librerias\\jasperreports-6.0.0.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\Javier\\Downloads\\Calendario\\jcalendar-1.3.3.jar
+file.reference.Librerias_material_desing.zip=C:\\Users\\Javier\\Downloads\\javier\\Librerias material desing.zip
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\mysql-connector-java-5.0.8-bin.jar
+file.reference.timingframework-core-5.0.0.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\timingframework-core-5.0.0.jar
+file.reference.timingframework-swing-5.0.0.jar=C:\\Users\\Javier\\Downloads\\javier\\Librerias\\timingframework-swing-5.0.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -39,10 +59,27 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.JasperLibrary.classpath}:\
-    ${libs.libreriaApache.classpath}:\
-    ${file.reference.MaterialButtons.jar}:\
-    ${libs.ButtonMaterialDesing.classpath}:\
-    ${libs.libreriaCalendar.classpath}
+    ${file.reference.Librerias_material_desing.zip}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-2.4.5.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.timingframework-core-5.0.0.jar}:\
+    ${file.reference.timingframework-swing-5.0.0.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.commons-collections-3.2.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.groovy-2.4.5.jar-1}:\
+    ${file.reference.itext-pdfa-5.5.4.jar-1}:\
+    ${file.reference.itextpdf-5.5.4.jar-1}:\
+    ${file.reference.jasperreports-6.0.0.jar-1}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
